crates/ferrum-interfaces/tests/ui/vnext/fail/allocation_receipt_cannot_be_constructed.stderr
error[E0451]: fields `resource_id`, `generation`, `descriptor` and `scope` of struct `ferrum_interfaces::vnext::DeviceAllocationReceipt` are private
  --> tests/ui/vnext/fail/allocation_receipt_cannot_be_constructed.rs:9:9
   |
 8 |     DeviceAllocationReceipt {
   |     ----------------------- in this type
 9 |         resource_id,
   |         ^^^^^^^^^^^ private field
10 |         generation: 1,
   |         ^^^^^^^^^^ private field
11 |         descriptor,
   |         ^^^^^^^^^^ private field
12 |         scope: PhantomData,
   |         ^^^^^ private field
